<?xml version="1.0"?>
<package format="3">
  <!-- =========================================================
       Serial - cross-platform C++ library for UART/RS-232 ports
       ========================================================= -->
  <name>serial</name>
  <version>1.2.1</version>

  <description>
    Serial is a cross-platform, simple-to-use library for accessing serial
    ports on Linux, macOS and Windows. It provides a C++ object-oriented
    interface for interacting with RS-232-like devices.
  </description>

  <!-- Maintainers -->
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <!-- Licence -->
  <license>MIT</license>

  <!-- URLs -->
  <url type="website">https://wjwwood.github.io/serial/</url>
  <url type="repository">https://github.com/wjwwood/serial</url>
  <url type="bugtracker">https://github.com/wjwwood/serial/issues</url>

  <!-- Authors -->
  <author email="wjwwood@gmail.com">William Woodall</author>
  <author email="ash.gti@gmail.com">John Harrison</author>

  <!-- =====================  Dependencies  ===================== -->
  <!-- Build-tool (CMake) -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- System libraries (linking done via target_link_libraries in CMake) -->
  <!-- No explicit ament run-depends required for rt, pthread, IOKit, etc. -->

  <!-- =====================  Testing (optional)  ===================== -->
  <!-- Remove if you don't need these -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <!-- =====================  Export  ===================== -->
  <export>
    <!-- Tell the build farm we are an ament_cmake package -->
    <build_type>ament_cmake</build_type>
  </export>
</package>

